@@ -7,6 +7,7 @@
 	remove rails-for-alist
 	using rails-directory<-->type for match current type and apply specific mode
   * rails-scripts.el (rails-run-script): fix #8035
+  * rails-lib.el (yml-value): fix #8037
 
 2007-01-13  dima  <dima.exe@gmail.com>
   * rails-core.el: apply patch #7342
